All 100 brands imported, some without colours; Colorify content-boxes re-arranged, Colorify content overflow fix, Colorify can skip brands with no image data.

--- a/colorify/css/main_section.css
+++ b/colorify/css/main_section.css
@@ -53,7 +53,7 @@ h1:hover .tooltip {
   text-align: center;
 }
 .starting p {
-  margin-bottom: 1em;
+  margin: 1em 0;
 }
 .brand-list {
   overflow: hidden;
@@ -105,4 +105,7 @@ h1:hover .tooltip {
 }
 .image {
   text-align: center;
+}
+.image #image {
+  display: none;
 }
